--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                 </a>
                 
                 <!-- Old Version -->
-                <a href="https://www.dropbox.com/scl/fi/ccig7tyw5vszv1o17zb91/GameSetupV5.2.6.zip?rlkey=9wtm9qr9b3w0zznwrtxcj7ewq&st=wx09yg9x&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
+                <a href="https://www.dropbox.com/scl/fi/qw170ndqllnmuast8xlzx/GameSetupV5.2.5.zip?rlkey=i28nnbcdhegmhwg9yktgt42au&st=d21bvx1a&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
                     <div class="flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-bold text-white uppercase tracking-widest group-hover:text-brand transition-colors text-lg">Old Version</span>
