--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             
             <div class="space-y-4">
                 <!-- New Version -->
-                <a href="https://www.dropbox.com/scl/fi/ccig7tyw5vszv1o17zb91/GameSetupV5.2.6.zip?rlkey=9wtm9qr9b3w0zznwrtxcj7ewq&st=wx09yg9x&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
+                <a href="https://www.dropbox.com/scl/fi/0cl7vo64q5jhfcp3bmaue/GameSetupV5.2.6.zip?rlkey=qtnbrytpmu3nd784bhlyq2mxp&st=q63pcv3c&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
                     <div class="relative z-10 flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-black text-black uppercase tracking-widest text-lg">New Version</span>
