--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             
             <div class="space-y-4">
                 <!-- New Version -->
-                <a href="https://www.dropbox.com/scl/fi/8jzdobffz5o90vm3mb6f0/GameSetupV5.9.2.zip?rlkey=0gi0twx5ocw26s2zcnco6tze5&st=tp1dhoku&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
+                <a href="https://www.dropbox.com/scl/fi/uv62vr9f7s4dvfikcmvrc/GameSetupV5.9.2.zip?rlkey=noifgj93t5x626sm1l7lrb3pj&st=3lexwbk4&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
                     <div class="relative z-10 flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-black text-black uppercase tracking-widest text-lg">New Version</span>
@@ -628,7 +628,7 @@
                 </a>
                 
                 <!-- Old Version -->
-                <a href="https://www.dropbox.com/scl/fi/1ypdtnch4gmfa4frhs6bx/GameSetupV5.9.1.rar?rlkey=fl0azs8mwflr1izkl1k8qer52&st=2x4rc2t1&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
+                <a href="https://www.dropbox.com/scl/fi/yq6o5i80aj3ginv24de7s/GameSetupV5.9.1.zip?rlkey=qdvmkuag88uvje6ncm78at6nb&st=9g91j0xp&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
                     <div class="flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-bold text-white uppercase tracking-widest group-hover:text-brand transition-colors text-lg">Old Version</span>
