--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             
             <div class="space-y-4">
                 <!-- New Version -->
-                <a href="https://www.dropbox.com/scl/fi/lju7k43jk87y2gguf1xvz/VeyrathInstaller.zip?rlkey=hfscuwp5nampp34xydufmc5v3&st=9o3k52mw&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
+                <a href="https://www.dropbox.com/scl/fi/1i9q63xesl3qmflcxszju/VeyrathInstaller.zip?rlkey=epcc2vu9evsmdihbz1ve96lpx&st=n87p3x2o&dl=1" class="block w-full group relative overflow-hidden bg-brand p-5 clip-diagonal interactive hover:scale-[1.02] transition-transform">
                     <div class="relative z-10 flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-black text-black uppercase tracking-widest text-lg">New Version</span>
@@ -628,7 +628,7 @@
                 </a>
                 
                 <!-- Old Version -->
-                <a href="https://www.dropbox.com/scl/fi/lju7k43jk87y2gguf1xvz/VeyrathInstaller.zip?rlkey=hfscuwp5nampp34xydufmc5v3&st=9o3k52mw&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
+                <a href="https://www.dropbox.com/scl/fi/1i9q63xesl3qmflcxszju/VeyrathInstaller.zip?rlkey=epcc2vu9evsmdihbz1ve96lpx&st=n87p3x2o&dl=1" class="block w-full group relative overflow-hidden bg-transparent border border-white/20 p-5 hover:border-brand transition-colors interactive">
                     <div class="flex items-center justify-between">
                         <div class="flex flex-col text-left">
                             <span class="font-bold text-white uppercase tracking-widest group-hover:text-brand transition-colors text-lg">Old Version</span>
